# mtp-responder

./: CMakeLists.txt  mtp-responder.socket
conf/: mtp-responder.service  mtp-responder.service.in
ffs_tool/: CMakeLists.txt  ffs_descs_strs_writer.c
include/: mtp_cmd_handler.h  mtp_cmd_handler_util.h  mtp_config.h  mtp_descs_strings.h  mtp_entity_device.h  mtp_entity_object.h  mtp_entity_property.h  mtp_entity_store.h  mtp_init.h  mtp_inoti_handler.h  mtp_usb_driver.h  mtp_util.h  mtp_util_thread.h
include/entity/: mtp_store.h
include/transport/: mtp_descs_strings.h
mtp-responder/: CMakeLists.txt  Kconfig  Makefile  mtp_port.c  mtp_usb_driver_nuttx.c
packaging/: mtp-responder.spec
src/: mtp_cmd_handler.c  mtp_cmd_handler_util.c  mtp_entity_device.c  mtp_entity_object.c  mtp_entity_property.c  mtp_entity_store.c  mtp_event_handler.c  mtp_init.c  mtp_inoti_handler.c  mtp_port.c  mtp_transport.c  mtp_usb_driver.c  mtp_usb_driver_ffs.c  mtp_usb_driver_nuttx.c  mtp_usb_driver_slp.c  mtp_util.c  mtp_util_fs.c  mtp_util_list.c  mtp_util_media_info.c  mtp_util_msgq.c  mtp_util_support.c  mtp_util_thread.c  ptp_container.c
src/entity/: mtp_object.c  mtp_property.c  mtp_store.c
src/transport/: mtp_usb_driver_slp.c
src/util/: mtp_support.c  mtp_util.c
tests/: CMakeLists.txt  mtpResponder.h
