
SET(FFS_WRITER "functionfs-desc-str-writer")
FILE(GLOB WRITER_SRCS *.c ${CMAKE_SOURCE_DIR}/src/mtp_descs_strings.c)

ADD_EXECUTABLE(${FFS_WRITER} ${WRITER_SRCS})
SET_TARGET_PROPERTIES(${FFS_WRITER} PROPERTIES POSITION_INDEPENDENT_CODE ON)
ADD_CUSTOM_COMMAND(OUTPUT descs strs
	COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${FFS_WRITER}
	DEPENDS ${FFS_WRITER}
)

ADD_CUSTOM_TARGET(FFS_FILE DEPENDS descs strs)
ADD_DEPENDENCIES(${PROJECT_NAME} FFS_FILE)

INSTALL(FILES descs DESTINATION ${SYSCONF_DIR}/${PROJECT_NAME})
INSTALL(FILES strs DESTINATION ${SYSCONF_DIR}/${PROJECT_NAME})
