SET(GTEST_TEST "gtest-mtp-responder")
ADD_DEFINITIONS("-DUSE_DLOG")

ADD_DEFINITIONS("-DTIZEN_TEST_GTESTS")
FILE(GLOB GTEST_TEST_SRCS *.cpp ${CMAKE_SOURCE_DIR}/src/*.c)
SET(REQUIRED_PKGS ${REQUIRED_PKGS} gmock)

PKG_CHECK_MODULES(TEST_PKGS REQUIRED ${REQUIRED_PKGS})
INCLUDE_DIRECTORIES(${TEST_PKGS_INCLUDE_DIRS})
LINK_DIRECTORIES(${TEST_PKGS_LIBRARY_DIRS})

ADD_EXECUTABLE(${GTEST_TEST} ${GTEST_TEST_SRCS})
TARGET_COMPILE_OPTIONS(${GTEST_TEST} PUBLIC ${TEST_PKGS_CFLAGS_OTHER})
SET_TARGET_PROPERTIES(${GTEST_TEST} PROPERTIES POSITION_INDEPENDENT_CODE ON)
TARGET_LINK_LIBRARIES(${GTEST_TEST} ${TEST_PKGS_LIBRARIES} pthread gcrypt)
INSTALL(TARGETS ${GTEST_TEST} DESTINATION ${BIN_INSTALL_DIR})
